# starlink-lens

./: .gitignore  .golangci.yml  .goreleaser.yaml  CHANGELOG  Dockerfile  Makefile  README.md  TODO  VERSION  go.mod  go.sum  pyproject.toml  release.sh  release_pkgs.py  starlink.sh
.github/ISSUE_TEMPLATE/: starlink-backbone-traceroute-report.md
.github/workflows/: build.yaml  release.yaml
ansible/: ansible.cfg
ansible/playbook/: lens.yaml  ping.yaml
ansible/ssh/: clarkzjw.pub
backbone-map/: README.md
backbone-map/data/: brisbane-australia-starlink-backbone-traceroute-149.19.txt  brisbane-australia-starlink-backbone-traceroute-206.224.txt  bruhl-germany-starlink-backbone-traceroute-149.19.txt  bruhl-germany-starlink-backbone-traceroute-206.224.txt  ghana-starlink-backbone-traceroute-149.19.txt  ghana-starlink-backbone-traceroute-206.224.txt  kanazawa-japan-starlink-backbone-traceroute-149.19.txt  kanazawa-japan-starlink-backbone-traceroute-206.224.txt  lincoln-usa-starlink-backbone-traceroute-149.19.txt  lincoln-usa-starlink-backbone-traceroute-206.224.txt  louvain-belgium-starlink-backbone-traceroute-149.19.txt  louvain-belgium-starlink-backbone-traceroute-206.224.txt  manila-philippines-starlink-backbone-traceroute-149.19.txt  manila-philippines-starlink-backbone-traceroute-206.224.txt  romania-starlink-backbone-traceroute-149.19.txt  (+11 more)
client/: .gitignore  config.ini.example  config.py  flent.py  inside-out.py  irtt.py  lens.service  outside-in.py  ping.py  sync.py  util.py
debian/: README.Debian  README.source  changelog  control  copyright  files  rules
(+22 files in other folders)
