[project]
name = "starlink-lens"
version = "0.1.0"
description = ""
authors = [
    {name = "clarkzjw",email = "i@jinwei.me"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3 (>=1.37.15,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false